--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.4.0",
+    "@nestjs/swagger": "^6.3.0",
     "@supabase/supabase-js": "^2.15.0",
     "chess.js": "1.0.0-beta.2",
     "nestjs-cls": "^3.3.1",
