--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^9.4.0",
     "@nestjs/swagger": "^6.3.0",
     "@supabase/supabase-js": "^2.15.0",
+    "chess-image-generator": "^1.0.9",
     "chess.js": "1.0.0-beta.2",
     "nestjs-cls": "^3.3.1",
     "reflect-metadata": "^0.1.13",
